--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .inner {
-  width: 100%;
+  width: 1100px;
   max-width: 1100px;
   margin: 0 auto;
 }
@@ -41,6 +41,18 @@
   color: #333;
 }
 
+body {
+  font-family: Lato;
+}
+
+.font {
+  font-family: Raleway;
+}
+
+h2 {
+  font-size: 24px;
+}
+
 #title {
   padding: 250px 0 ;
   background-color: #f2f2f2;
@@ -50,9 +62,10 @@
   font-size: 90px;
   font-weight: 700;
   color:#74cfae;
+
 }
 
-.mainTitle h2 {
+.mainTitle p {
   font-size: 30px;
   color: #c0c0c0;
   margin-top: 20px;
@@ -62,36 +75,27 @@
   background-color: #74cfae;
   padding-top: 50px;
   margin-bottom: 0px;
-  position: relative;
+  width: 100%;
 }
 
-.clearfix::after{
-  content:"";
-  display: block;
-  clear: both;
+.green-inner {
+  display: flex;
+  justify-content: space-between;
 }
 
 .iphoneImg {
-  display: block;
-  float:left;
+  margin-left: 100px;
 }
 
-.greenTitle {
-  display: inline-block;
-  float: right;
-  position: absolute;
-  top: 50%;
-  left:65%;
-  transform:  translateY(-50%) translateX(-50%);
-}
-
-.greenTitle h3 {
+.greenTitle h2 {
   color: #fff;
   font-weight: 400;
   margin-bottom: 35px;
+  margin-top: 50px;
 }
 
 .greenTitle p{
+  width: 650px;
   color:#fff;
   font-weight: 400;
   font-size: 20px;
@@ -100,6 +104,7 @@
 #portfolio {
   padding: 60px 0 70px 0;
   background-color: #f2f2f2;
+  width: 100%;
 }
 
 .mt {
@@ -156,6 +161,7 @@
 #skills {
   background-color: #333;
   padding: 70px 0 100px 0;
+  width: 100%;
 }
 
 .skillTitle {
@@ -165,14 +171,13 @@
 
 .mainSkill {
   display: flex;
-  justify-content: space-between;
 }
 
 .skillPra {
   margin-right: 180px;
 }
 
-.skillPra p {
+.skillPra figcaption {
   margin-top: 10px;
   color: #fff;
   font-size: 16px;
@@ -182,6 +187,7 @@
 #sns {
   background-color: #f2f2f2;
   padding: 200px 0;
+  width: 100%;
 }
 
 .sns-contents {
@@ -211,9 +217,4 @@
 .footer-text {
   display: flex;
   justify-content: flex-end;
-}
-
-h3 {
-  font-size: 24px;
-  font-family: "Raleway";
 }
