--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,10 @@
   color: #fff;
   background-color: #74cfae;
   text-decoration:none;
+  transition: 0.3s;
 }
 
 .header-bottom:hover {
-  transition: 0.3s;
   color: #333;
 }
 
@@ -54,7 +54,8 @@ h2 {
 }
 
 #title {
-  padding: 250px 0 ;
+  padding-top: 265px;
+  padding-bottom: 250px;
   background-color: #f2f2f2;
 }
 
@@ -85,6 +86,10 @@ h2 {
 
 .iphoneImg {
   margin-left: 100px;
+}
+
+.iphoneImg img {
+  display: block;
 }
 
 .greenTitle h2 {
@@ -121,6 +126,7 @@ h2 {
 .work img {
   max-width: 100%;
   height: auto;
+  transition: 0.3s;
 }
 
 .grid img {
@@ -128,7 +134,6 @@ h2 {
 }
 
 .grid img:hover {
-  transition: 0.3s;
   opacity: 1;
 }
 
@@ -146,10 +151,10 @@ h2 {
   color: #fff;
   background-color: #74cfae;
   border-color: transparent;
+  transition: 0.3s;
 }
 
 .btn-theme:hover {
-  transition: 0.3s ;
   color: #333;
 }
 
@@ -160,7 +165,8 @@ h2 {
 
 #skills {
   background-color: #333;
-  padding: 70px 0 100px 0;
+  padding-top: 70px;
+  padding-bottom: 100px;
   width: 100%;
 }
 
@@ -171,10 +177,19 @@ h2 {
 
 .mainSkill {
   display: flex;
+  justify-content: center;
 }
 
-.skillPra {
-  margin-right: 180px;
+ul.mainSkill li {
+  margin-left: 180px;
+}
+
+ul.mainSkill li:first-child {
+  margin-left: 0px;
+}
+
+.skillPra img {
+  vertical-align: center;
 }
 
 .skillPra figcaption {
@@ -195,8 +210,11 @@ h2 {
   justify-content: center;
 }
 
+.sns-icon {
+  transition: 0.3s;
+}
+
 .sns-icon:hover {
-  transition: 0.3s ;
   background-color: #fff;
 }
 
