--- a/css/style.css
+++ b/css/style.css
@@ -126,13 +126,13 @@ main {
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 100px;
   grid-row-gap: 80px;
-}s
+}
 
 .work img {
   max-width: 100%;
   height: auto;
   transition: 0.3s;
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .work img:hover {
@@ -217,6 +217,10 @@ ul.mainSkill li:first-child {
 
 .sns-icon:hover {
   background-color: #fff;
+}
+
+.sns-icon a {
+  width: 185px;
 }
 
 .sns-icon i {
