--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+
 .wrapper{
   text-align: center;
   align-items: center;
@@ -135,7 +135,7 @@ main {
   margin-left: 0;
 }
 
-.work li:nth-child(4) {
+.work li:nth-child(3n+1) {
   margin-left: 0;
 }
 
